Fixed viewport #main and button spacing

--- a/src/less/ikea-helper.less
+++ b/src/less/ikea-helper.less
@@ -27,7 +27,6 @@ body {
 }
 
 #main {
-  overflow: auto;
   padding-bottom: 3.5em;
 }  /* must be same height as the footer */
 
